force-app/main/default/objects/Score_Card__c/Score_Card__c.object-meta.xml
<CustomObject>
    <label>Score Card</label>
    <nameField>
        <label>Score Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Score Card</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>