force-app/main/default/objects/Score_Card__c/fields/Agent__c.field-meta.xml
<CustomField>
    <fullName>Agent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agent</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Score Card</relationshipLabel>
    <relationshipName>Score_Card</relationshipName>
    <type>Lookup</type>
</CustomField>