force-app/main/default/objects/Score_Card__c/fields/Agent_Agrees_with_Scores_Feedback__c.field-meta.xml
<CustomField>
    <fullName>Agent_Agrees_with_Scores_Feedback__c</fullName>
    <label>Agent Agrees with Scores/Feedback</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Agrees</fullName>
            </value>
            <value>
                <fullName>Disagrees</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>