force-app/main/default/objects/Score_Card__c/fields/AVG_Accuracy_Point__c.field-meta.xml
<CustomField>
    <fullName>AVG_Accuracy_Point__c</fullName>
    <formula>X7_Point__c +
 X8_Point__c +
 X9_Point__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVG Accuracy Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>