force-app/main/default/objects/Score_Card__c/fields/AVG_CALL_MON__c.field-meta.xml
<CustomField>
    <fullName>AVG_CALL_MON__c</fullName>
    <formula>AVG_Accuracy_Point__c + AVG_Courtesy_Point__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVG CALL MON</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>