force-app/main/default/objects/Score_Card__c/fields/AVG_Courtesy_Point__c.field-meta.xml
<CustomField>
    <fullName>AVG_Courtesy_Point__c</fullName>
    <formula>X1_Point__c +
 X2_Point__c +
 X3_Point__c +
 X4_Point__c +
 X5_Point__c +
 X6_Point__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVG Courtesy Point</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>