force-app/main/default/objects/Score_Card__c/fields/Card_No__c.field-meta.xml
<CustomField>
    <fullName>Card_No__c</fullName>
    <label>Card No</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>