force-app/main/default/objects/Score_Card__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Score Card</relationshipLabel>
    <relationshipName>Score_Card</relationshipName>
    <type>Lookup</type>
</CustomField>