force-app/main/default/objects/Score_Card__c/fields/Evaluator__c.field-meta.xml
<CustomField>
    <fullName>Evaluator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Evaluator</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Score Card (Evaluator)</relationshipLabel>
    <relationshipName>Score_Card1</relationshipName>
    <type>Lookup</type>
</CustomField>