force-app/main/default/objects/Score_Card__c/fields/Kesimpulan__c.field-meta.xml
<CustomField>
    <fullName>Kesimpulan__c</fullName>
    <label>Kesimpulan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>