force-app/main/default/objects/Score_Card__c/fields/Perform__c.field-meta.xml
<CustomField>
    <fullName>Perform__c</fullName>
    <formula>IF (AVG_CALL_MON__c &gt; 85, &quot;Exceed&quot;,
IF (AVG_CALL_MON__c &gt; 82, &quot;Threshold&quot;,
IF (AVG_CALL_MON__c &gt; 64, &quot;Caution&quot;,
&quot;Risk&quot;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Perform</label>
    <type>Text</type>
</CustomField>