force-app/main/default/objects/Score_Card__c/fields/X1_Key_Check__c.field-meta.xml
<CustomField>
    <fullName>X1_Key_Check__c</fullName>
    <defaultValue>&quot;GREETING CALLS&quot;</defaultValue>
    <label>1 Key Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>