force-app/main/default/objects/Score_Card__c/fields/X1_Master_Point__c.field-meta.xml
<CustomField>
    <fullName>X1_Master_Point__c</fullName>
    <defaultValue>5</defaultValue>
    <label>1 Master Point</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>