force-app/main/default/objects/Score_Card__c/fields/X1_Remark__c.field-meta.xml
<CustomField>
    <fullName>X1_Remark__c</fullName>
    <label>1 Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>