force-app/main/default/objects/Score_Card__c/fields/X1_Score__c.field-meta.xml
<CustomField>
    <fullName>X1_Score__c</fullName>
    <label>1 Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>