force-app/main/default/objects/Score_Card__c/fields/X2_Key_Check__c.field-meta.xml
<CustomField>
    <fullName>X2_Key_Check__c</fullName>
    <defaultValue>&quot;RESPONSIVENESS&quot;</defaultValue>
    <label>2 Key Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>