force-app/main/default/objects/Score_Card__c/fields/X2_Master_Point__c.field-meta.xml
<CustomField>
    <fullName>X2_Master_Point__c</fullName>
    <defaultValue>10</defaultValue>
    <label>2 Master Point</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>