force-app/main/default/objects/Score_Card__c/fields/X2_Point__c.field-meta.xml
<CustomField>
    <fullName>X2_Point__c</fullName>
    <formula>IF ( TEXT(X2_Score__c) == &apos;YES&apos;,
 X2_Master_Point__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2 Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>