force-app/main/default/objects/Score_Card__c/fields/X2_Remark__c.field-meta.xml
<CustomField>
    <fullName>X2_Remark__c</fullName>
    <label>2 Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>