force-app/main/default/objects/Score_Card__c/fields/X2_Score_Name__c.field-meta.xml
<CustomField>
    <fullName>X2_Score_Name__c</fullName>
    <formula>TEXT(X2_Score__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>2 RESPONSIVENESS</label>
    <type>Text</type>
</CustomField>