force-app/main/default/objects/Score_Card__c/fields/X3_Description__c.field-meta.xml
<CustomField>
    <fullName>X3_Description__c</fullName>
    <label>3 Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>