force-app/main/default/objects/Score_Card__c/fields/X3_Key_Check__c.field-meta.xml
<CustomField>
    <fullName>X3_Key_Check__c</fullName>
    <defaultValue>&quot;INTONATION&quot;</defaultValue>
    <label>3 Key Check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>