force-app/main/default/objects/Score_Card__c/fields/X3_Point__c.field-meta.xml
<CustomField>
    <fullName>X3_Point__c</fullName>
    <formula>IF ( TEXT(X3_Score__c) == &apos;YES&apos;,
 X3_Master_Point__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>3 Point</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>