force-app/main/default/objects/Score_Card__c/fields/X3_Remark__c.field-meta.xml
<CustomField>
    <fullName>X3_Remark__c</fullName>
    <label>3 Remark</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>