force-app/main/default/objects/Score_Card__c/fields/X4_Description__c.field-meta.xml
<CustomField>
    <fullName>X4_Description__c</fullName>
    <label>4 Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>