force-app/main/default/objects/Score_Card__c/fields/X4_Score_Name__c.field-meta.xml
<CustomField>
    <fullName>X4_Score_Name__c</fullName>
    <formula>TEXT(X4_Score__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>4 LISTENING &amp; EMPHATY/HUMAN TOUCH</label>
    <type>Text</type>
</CustomField>