force-app/main/default/objects/Score_Card__c/fields/X5_Score_Name__c.field-meta.xml
<CustomField>
    <fullName>X5_Score_Name__c</fullName>
    <formula>TEXT(X5_Score__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>5 PERSONALIZED</label>
    <type>Text</type>
</CustomField>