force-app/main/default/objects/Score_Card__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Periode__c</columns>
    <columns>Agent__c</columns>
    <columns>Tgl_Call_Mon__c</columns>
    <columns>No_Polis__c</columns>
    <columns>Contact__c</columns>
    <columns>Entity__c</columns>
    <columns>Perform__c</columns>
    <columns>Card_No__c</columns>
    <columns>AVG_Courtesy_Point__c</columns>
    <columns>AVG_Accuracy_Point__c</columns>
    <columns>AVG_CALL_MON__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>