force-app/main/default/objects/Score_Card__c/listViews/All_ALI.listView-meta.xml
<ListView>
    <fullName>All_ALI</fullName>
    <columns>NAME</columns>
    <columns>Periode__c</columns>
    <columns>Agent__c</columns>
    <columns>Tgl_Call_Mon__c</columns>
    <columns>No_Polis__c</columns>
    <columns>Contact__c</columns>
    <columns>Entity__c</columns>
    <columns>Perform__c</columns>
    <columns>Card_No__c</columns>
    <columns>AVG_Courtesy_Point__c</columns>
    <columns>AVG_Accuracy_Point__c</columns>
    <columns>AVG_CALL_MON__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Entity__c</field>
        <operation>equals</operation>
        <value>ALI</value>
    </filters>
    <label>All ALI</label>
    <language>en_US</language>
    <sharedTo>
        <roleAndSubordinatesInternal>CEO_ALI</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>